--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "emulator": "cross-env DOTENV_CONFIG=extensions/test-params-flatten-nested-false.local.env firebase emulators:start --import=emulator_data",
     "export": "firebase emulators:export emulator_data",
-    "test": "npm run test:flatttened && npm run test:unflattened && npm run test:subcollection",
+    "test": "npm run test:flatttened && npm run test:unflattened && npm run test:rest",
     "test:flatttened": "cp -f extensions/test-params-flatten-nested-true.local.env functions/.env && cross-env NODE_OPTIONS=--experimental-vm-modules DOTENV_CONFIG=extensions/test-params-flatten-nested-true.local.env firebase emulators:exec --only functions,firestore,extensions  'jest --testRegex=\"WithFlattening\" --testRegex=\"backfill.spec\"'",
     "test:unflattened": "cp -f extensions/test-params-flatten-nested-false.local.env functions/.env && cross-env NODE_OPTIONS=--experimental-vm-modules DOTENV_CONFIG=extensions/test-params-flatten-nested-false.local.env firebase emulators:exec --only functions,firestore,extensions 'jest --testRegex=\"WithoutFlattening\"'",
-    "test:subcollection": "jest --testRegex=\"writeLogging\" --testRegex=\"Subcollection\" --detectOpenHandles",
+    "test:rest": "jest --testRegex=\"processBuffer.spec\" --testRegex=\"writeLogging\" --testRegex=\"Subcollection\" --detectOpenHandles",
     "typesenseServer": "docker compose up",
     "lint:fix": "eslint . --fix",
     "lint": "eslint .",
@@ -23,10 +23,10 @@
     "dotenv": "^16.4.7",
     "eslint": "^8.52.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^10.0.1",
     "firebase-admin": "^13.0.2",
     "firebase-functions": "^6.2.0",
     "firebase-functions-test": "^3.4.0",
-    "eslint-config-prettier": "^10.0.1",
     "jest": "^29.7.0",
     "jest-dev-server": "^10.1.0",
     "jest-junit": "^16.0.0",
