--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "jest-dev-server": "^10.1.0",
     "jest-junit": "^16.0.0",
     "prettier": "^3.4.2",
-    "typesense": "^1.8.2"
+    "typesense": "^2.1.0-2"
   },
   "private": true
 }
