feat(config): add document transformation configuration options
- add TRANSFORM_FUNCTION_NAME parameter for specifying transform function
- add TRANSFORM_FUNCTION_PROJECT_ID for cross-project function support
- add TRANSFORM_FUNCTION_REGION for region specification
- add TRANSFORM_FUNCTION_SECRET for authorization to protected functions

--- a/extension.yaml
+++ b/extension.yaml
@@ -349,3 +349,39 @@ params:
         value: true
     default: false
     required: false
+  - param: TRANSFORM_FUNCTION_NAME
+    label: Transform Function Name
+    description: >-
+      Optional: Name of a Cloud Function to transform Firestore documents before indexing them into Typesense.
+      If specified, this extension will call this function with each document before indexing.
+      Leave empty to skip transformation.
+    example: transformDoc
+    default: ""
+    required: false
+  - param: TRANSFORM_FUNCTION_PROJECT_ID
+    label: Transform Function Project ID
+    description: >-
+      Project ID where the transform function is deployed. 
+      Only required if TRANSFORM_FUNCTION_NAME is set.
+      Defaults to the current project ID if not specified.
+    example: my-project
+    default: ""
+    required: false
+  - param: TRANSFORM_FUNCTION_REGION
+    label: Transform Function Region
+    description: >-
+      Region where the transform function is deployed.
+      Only required if TRANSFORM_FUNCTION_NAME is set.
+      Defaults to the same region as this extension if not specified.
+    example: us-central1
+    default: ""
+    required: false
+  - param: TRANSFORM_FUNCTION_SECRET
+    label: Transform Function Secret
+    type: secret
+    description: >-
+      Authorization secret for the transform function.
+      This will be sent in the Authorization header as "Bearer [secret]".
+      Only required if TRANSFORM_FUNCTION_NAME is set and the transform function requires authorization.
+    example: ""
+    required: false
